--- a/package.json
+++ b/package.json
@@ -14,16 +14,11 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
-    "amqplib": "^0.10.4",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.1",
-    "node-cache": "^5.1.2",
-    "puppeteer": "^23.8.0",
-    "redis": "^4.7.0",
-    "socket.io": "^4.8.1"
+    "node-cache": "^5.1.2"
   }
 }
