--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "socket.io": "^4.8.1"
   }
 }
